@@ -34,4 +34,5 @@ t/09_default_arg.t                       See if default arguments work
 t/10_stat_fh_leak.t                      See if stat(), lstat() or alt_stat() leak filehandles
 t/11_utime_fh_leak.t                     See if utime() leaks filehandles
 t/12_errstr.t                            See if $ErrStr variable works
-t/13_pod.t                               See if POD is OK
+t/13_critic.t                            See if coding style is OK
+t/14_pod.t                               See if POD is OK
