@@ -1,7 +1,7 @@
 #!perl
 #===============================================================================
 #
-# t/13_pod.t
+# t/14_pod.t
 #
 # DESCRIPTION
 #   Test script to check POD.
